--- a/css/styles.css
+++ b/css/styles.css
@@ -314,11 +314,20 @@ address {
 .reasons-list {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 0px;
 }
 .reasons-item {
+  text-align: center;
   font-size: 1.2em;
   color: #ffefe1;
+  transition: 300ms ease-in-out;
+  transition-property: transform;
+}
+.reasons-item:active {
+  transform: scale(1.1);
+  font-size: 1.2em;
+  font-weight: 600;
+  color: #869ff9;
 }
 
 /* #endregion */
@@ -329,7 +338,9 @@ address {
 }
 .moments-list {
   display: flex;
-  gap: 30px;
+  gap: 40px;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
 }
 .moments-list::-webkit-scrollbar {
   display: none;
