--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
 }
 
 .main {
-  background-color: #ff8383;
+  background-color: #ff83839d;
 }
 
 /* reset */
@@ -323,6 +323,8 @@ address {
   transition: 300ms ease-in-out;
   transition-property: transform;
 }
+.reasons-item:hover,
+.reasons-item:focus,
 .reasons-item:active {
   transform: scale(1.1);
   font-size: 1.2em;
@@ -353,3 +355,35 @@ address {
 }
 
 /* #endregion */
+
+/* #region Wishes */
+.wishes-text {
+  text-align: center;
+  font-size: 1.2em;
+  color: #ffefe1;
+  transition: 300ms ease-in-out;
+  transition-property: transform;
+}
+
+.wishes-text:hover,
+.wishes-text:focus,
+.wishes-text:active {
+  transform: scale(1.1);
+  font-size: 1.2em;
+  font-weight: 500;
+  color: #869ff9;
+}
+/* #endregion */
+
+.btn {
+  background-color: #ff4500;
+  border-radius: 15px;
+  border: 2px solid #ffd700;
+  min-width: 50px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #ffdab9;
+}
