--- a/css/styles.css
+++ b/css/styles.css
@@ -352,8 +352,8 @@ address {
   border: 2px solid #ffdab9;
   overflow: hidden;
   max-width: 340px;
-  max-height: 477px;
-  object-fit: contain;
+  height: 599px;
+  object-fit: cover;
 }
 
 /* #endregion */
